--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+body {
+    font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 20px;
+    width: 100%;
+    color: #777777;
+}
+
 #sign-in-div {
     text-align: center;
     margin: auto;
@@ -38,20 +46,35 @@
     height: 200px;
 }
 
+
 #logout {
     position: absolute;
+    display: block;
     top: 50px;
     right: 50px;
 }
 
-.container-fluid {
+
+@media screen and (max-width: 500px) {
+    #header {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    #logout {
+      float: center;
+    }
+  }
+
+
+/* .container-fluid {
     padding: 10px;
     margin: 20px;
-}
+} */
 
-.nav {
+/* .nav {
     margin-bottom: 0px;
-}
+} */
 
 
 .p {
@@ -62,7 +85,6 @@
     background-color: #e2e5de; 
     border: none;
     color: #551924;  
-    
 }
 
 .btn-primary:hover {
@@ -80,6 +102,12 @@
     background-color: #1d1718;
     color: #e2e5de;
     
+}
+
+#logout:hover {
+    animation-name: background-color;
+    background-color: #1d1718;
+    color: #e2e5de;
 }
 
 .form-control {
