added profile button on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,13 @@ body {
     right: 50px;
 }
 
+#profile {
+    position: absolute;
+    display: block;
+    top: 120px;
+    right: 50px;
+}
+
 
 @media screen and (max-width: 500px) {
     #header {
