--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ body {
 #logout {
     position: absolute;
     display: block;
-    top: 84px;
+    top: 50px;
     right: 50px;
 }
 
@@ -63,8 +63,8 @@ body {
 #profile {
     position: absolute;
     display: block;
-    top: 140px;
-    right: 54px;
+    top: 120px;
+    right: 50px;
 }
 
 
@@ -76,6 +76,13 @@ body {
     }
     #logout {
       float: center;
+    }
+    #logout {
+        top: 84px !important;
+    }
+    #profile {
+        right: 54px !important;
+        top: 140px !important;
     }
   }
 
